--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@akveo/ng2-completer": "^9.0.1",
     "@angular/animations": "~11.1.1",
     "@angular/cdk": "^11.0.0",
     "@angular/common": "~11.1.1",
@@ -34,6 +35,7 @@
     "eva-icons": "^1.1.2",
     "ionicons": "^2.0.1",
     "moment": "^2.29.1",
+    "ng2-smart-table": "^1.7.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
