--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,7 @@
             ],
             "styles": [
               "./node_modules/@nebular/theme/styles/prebuilt/default.css",
+              "./node_modules/nebular-icons/css/nebular-icons.css",
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "node_modules/ionicons/scss/ionicons.scss",
               "src/styles.scss"
