--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "eva-icons": "^1.1.2",
     "ionicons": "^2.0.1",
     "moment": "^2.29.1",
+    "nebular-icons": "^1.1.0",
+    "ng2-completer": "^9.0.1",
     "ng2-smart-table": "^1.7.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
