--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bootstrap": "^4.5.0",
     "eva-icons": "^1.1.2",
     "ionicons": "^2.0.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "nebular-icons": "^1.1.0",
     "ng2-completer": "^9.0.1",
